--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ dmypy.json
 .idea/
 
 data/
+Peer revieuw/Opdracht 1 - Verkenning van de analyse.ipynb
+Peer revieuw/Verkenning Analyse DIP.ipynb
+Peer revieuw/Opdracht 1 - Verkenning van de analyse pr.txt
