--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@ data/
 Peer revieuw/Opdracht 1 - Verkenning van de analyse.ipynb
 Peer revieuw/Verkenning Analyse DIP.ipynb
 Peer revieuw/Opdracht 1 - Verkenning van de analyse pr.txt
+
+assignment_1/submission.csv
