--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ Peer revieuw/Verkenning Analyse DIP.ipynb
 Peer revieuw/Opdracht 1 - Verkenning van de analyse pr.txt
 
 assignment_1/submission.csv
+
+assignment_1/true_score.csv
